2006-03-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt10
	* info/patches/realtime_patches/patch-2.6.16-rt10: added

2006-03-23 David Brown <dmlb2000@gmail.com>
	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.15.patch: added
	  compatibility with 2.6.16

2006-03-23 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-mm1
	* info/patches/mm_patches/2.6.16-mm1: added

2006-03-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc6-mm2
	* info/patches/mm_patches/2.6.16-rc6-mm2: added

2006-03-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks1
	* info/patches/ck_server_patches/patch-2.6.16-cks1: added

2006-03-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck1
	* info/patches/ck_patches/patch-2.6.16-ck1: added

2006-03-20 David Brown <dmlb2000@gmail.com>
	* info/patches/PRE_2_6/patch-2.6.16: added
	* info/patches/maintenance_patches/patch-2.6.16: added
	* info/kernels/2.6.16: added
	* latest.defaults: updated to 2.6.16

2006-03-16 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc6-rt7
	* info/patches/realtime_patches/patch-2.6.16-rc6-rt7: added

2006-03-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc6-rt6
	* info/patches/realtime_patches/patch-2.6.16-rc6-rt6: added
	* info/patches/realtime_patches/patch-2.6.16-rc6-rt4: fixed version

2006-03-14 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc6-rt3
	* info/patches/realtime_patches/patch-2.6.16-rc6-rt3: added

2006-03-12 David Brown <dmlb2000@gmail.com>
	* info/patches/realtime_patches/patch-2.6.16-rc6-rt1: fixed source and
	  patchversion (didn't do a good enough job checking) 

2006-03-12 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc6-rt1