@@ -1,3 +1,6 @@
+2006-03-28 David Brown <dmlb2000@gmail.com>
+	* info/patches/sws2_patches/suspend2-2.2.2-for-2.6.16.patch: added
+
 2006-03-27 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16-rt10
 	* info/patches/realtime_patches/patch-2.6.16-rt10: added
